--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.card-img-top {
+  border: 1px solid lightgrey;
+  padding: 4px;
+  border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  padding: 5px;
+  border: 0;
+  outline: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.relative {
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.absolute {
+  position: absolute;
+  left: 10px;
+  top: 0;
+}
+
+.btn {
+  border: 0;
+  outline: none;
+  background-color: green;
   color: white;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-left: -10px;
 }
 
-.App-link {
-  color: #61dafb;
+input[type='radio'] {
+  margin-right: 5px;
+  margin-top: 140px;
+  border: 1px solid green;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.patch{
+  border-radius: 15px;
+  margin-left: 170px;
+  border: 1px solid grey;
+  background-color: light;
+  margin-top: 4px;
+}
+.btn1{
+  width: 200px;
+  margin-top: 8px;
+  margin-left: 25px;
+  border: 2px solid red; 
+  outline: none;
+  background-color: white;
+  padding: 6px;
+  border-radius: 5px;
+}
+.card-img-top{
+  height: 200px;
 }
